# ep-micro-polling/config/swagger.json
@@ -178,20 +178,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "params",
-            "in": "params",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "eventId": {
-                  "type": "string",
-                  "example": "E1"
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -214,20 +200,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "params",
-            "in": "params",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "eventId": {
-                  "type": "string",
-                  "example": "E1"
-                }
-              }
-            }
           }
         ],
         "responses": {
